syntax = "proto3";
option go_package = ".";

import "message.proto";

message ValidationResponse {
  bool valid = 1;
  Message message = 2;
}